@@ -1,3 +1,5 @@
+2014-04-xx 0.6.4 Password protection
+ 
 2014-04-06 0.6.3 Recurrent records hotfix
  
 2014-03-27 0.6.2 UI redesign and theme roller
